--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "nodemon": "^2.0.21",
     "request": "^2.88.2"
   }
 }
